fix: home page landscape mode credits visible

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,7 +9,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        max-height: 90vh;
+        /* max-height: 90vh; */
         overflow: hidden;
         position: relative;
 
@@ -64,7 +64,7 @@
     }
 }
 
-@media (min-width: 720px) {
+@media (min-width: 650px) {
     .home {
         .home-hero {
             .home-hero-img {
